--- a/userAgent.html
+++ b/userAgent.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1; minimum-scale=1; user-scalable=no;">
 <div id="console"></div>
 <script src='https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js'></script>
 <script>
